# qt_app_crosscompile_vscode

./: CMakeLists.txt  README.md  main.cpp
